@@ -15,6 +15,8 @@
 
 
 /* KDE INCLUDES */
+#include <klocale.h>
+#include <kglobal.h>
 
 /* QT INCLUDES */
 #include <qmetaobject.h>
@@ -24,8 +26,14 @@
 #include <qpoint.h>
 
 /* OTHER INCLUDES */
-#include <specials.h>
+#include "kommanderplugin.h"
+#include "specials.h"
 #include "table.h"
+
+#define TBL_FUNCTION 365
+#define sortColumnExtra TBL_FUNCTION+1
+#define TBL_LAST_FUNCTION sortColumnExtra
+
 
 Table::Table(QWidget *a_parent, const char *a_name)
   : QTable(a_parent, a_name), KommanderWidget(this)
@@ -34,6 +42,9 @@ Table::Table(QWidget *a_parent, const char *a_name)
   states << "default";
   setStates(states);
   setDisplayStates(states);
+  KommanderPlugin::setDefaultGroup(Group::DCOP);
+  KommanderPlugin::registerFunction(sortColumnExtra, "sortColumnExtra(QString widget, int col, bool ascending, bool wholeRows)", i18n("Sets a column to sort ascending or descending. Optionally can sort with rows intact for database use."), 2, 4);
+
 }
 
 Table::~Table()
@@ -91,7 +102,7 @@ bool Table::isFunctionSupported(int f)
   return f == DCOP::currentColumn || f == DCOP::currentRow || f == DCOP::insertColumn || 
       f == DCOP::insertRow || f == DCOP::cellText || f == DCOP::setCellText || f == DCOP::setCellWidget || f == DCOP::cellWidget ||
       f == DCOP::removeRow || f == DCOP::removeColumn || f == DCOP::setColumnCaption ||
-      f == DCOP::setRowCaption || f == DCOP::text || f == DCOP::setText || f == DCOP::selection;
+      f == DCOP::setRowCaption || f == DCOP::text || f == DCOP::setText || f == DCOP::selection || (f >= TBL_FUNCTION && f <= TBL_LAST_FUNCTION);
 }
 
 void Table::setCellWidget(int row, int col, const QString & _widgetName)
@@ -238,6 +249,9 @@ QString Table::handleDCOP(int function, const QStringList& args)
     }
     case DCOP::selection:
       return selectedArea();
+      break;
+    case sortColumnExtra:
+      QTable::sortColumn(args[0].toInt(), args[1].toInt(), args[2].toInt());
       break;
     default:
       return KommanderWidget::handleDCOP(function, args);
